[tool.poetry]
name = "project-2-demo"
version = "0.1.0"
description = ""
authors = ["ajogseneca <ageorge55@myseneca.ca>"]
readme = "README.md"
packages = [{include = "project_2_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pandas = "^1.3.3"
numpy = "^1.21.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
